--- a/CWBDataApp/templates/CWBDataApp/MaterialTestQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialTestQuery.html
@@ -19,8 +19,10 @@
     {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
   </div>
 
+<div class="justify-content-center row no-gutters">
   <form action="{% url 'CWBDataApp:MaterialTestQuery'%}" method="post">
     <div class="d-inline-flex flex-column">
+      <h4 id=header>Search for a Test </h4>
       {% csrf_token %}
       <div class="inline-flex inputBox">
         <label for="batchName">Batch Name*: </label>
@@ -30,5 +32,6 @@
       <input type="submit" name="enterNewBatch" value="Submit">
     </div>
   </form>
+</div>
 
 {% endblock content %}
