--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
@@ -21,7 +21,7 @@
 </div>
 
 
-
+<div class="justify-content-center row no-gutters">
   <form action="{% url 'CWBDataApp:ProductInventoryUpdate'%}" method="post">
     <div class="d-inline-flex flex-column">
       <h4 id=header>Update Product </h4>
@@ -59,5 +59,6 @@
       <input type="submit" name="enterNewProduct" value="Update">
     </div>
   </form>
+</div>
 
 {% endblock content %}
