--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -32,7 +32,7 @@
 
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:index' %}">Home</a>
               </li>
@@ -45,17 +45,23 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:BatchCostQuery'%}"> Search Batch </a>
                 </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'CWBDataApp:MaterialTest'%}">Material Testing</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkTest" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
+                  Material Testing
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkTest">
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialTest'%}"> Enter a Material Test </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialTestQuery'%}"> Search for a Test </a>
+                </div>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkProduct" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
                   Product Inventory
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkProduct">
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventory'%}"> Enter </a>
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryUpdate'%}"> Update </a>
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryQuery'%}"> Search </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventory'%}"> Enter a Product</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryUpdate'%}"> Update Product</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:ProductInventoryQuery'%}"> Search for Product</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -70,6 +76,12 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine2'%}"> Machine 2 </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine3'%}"> Machine 3 </a>
                 </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Pic&Sum</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Forms</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Help</a>
