Finished material inventory forms

--- a/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
@@ -50,7 +50,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight1">Weight 1*: </label>
-            <input id="weight1" type="number" name="weight1" value="0">
+            <input id="weight1" type="number" name="weight1" value="1" min="1">
           </div>
 
           <div class="inline-flex inputBox">
