Added new templates for adding misc values to tables

--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -82,8 +82,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Forms</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Help</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkHelp" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
+                  Help
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkHelp">
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:help'%}"> General Help</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddEmployee'%}"> Add Employee</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddBoardProfile'%}"> Add Board Profile</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddColour'%}"> Add Colour</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:AddSupplier'%}"> Add Supplier</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'admin:index'%}">Admin</a>
