--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -64,6 +64,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkMaterialInventory">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialInventory'%}"> Enter Material</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialInventoryQuery'%}"> Search for Material</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialInventoryUpdate'%}"> Update Material</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
