--- a/CWBDataApp/templates/CWBDataApp/MaterialInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventory.html
@@ -14,7 +14,7 @@
         Material inventory is used to track raw materials, premixes, batches, and shred in the warehouse. Currently the location value
         isn't being used but in the future will be used to locate boxes within the shop.
     </p>
-    <p id="descriptionParagraph">If you want to pull material inventory data click <a href="{% url 'CWBDataApp:MaterialTestQuery'%}">HERE</a></p>
+    <p id="descriptionParagraph">If you want to pull material inventory data click <a href="{% url 'CWBDataApp:MaterialInventoryQuery'%}">HERE</a> if you want to update a material entry click <a href="{% url 'CWBDataApp:MaterialInventoryUpdate'%}">HERE</a></p>
 
   {% if error_message %} <p id="error"> {{error_message}} </p> {% endif %}
   {% if dataAcceptedMessage %} <p id="accepted"> {{dataAcceptedMessage}} </p> {% endif %}
@@ -34,12 +34,23 @@
 
         <div class="inline-flex inputBox">
           <label for="supplier">Supplier*: </label>
-          <input id="supplier" type="text" name="supplier" maxlength="30">
+          <select id="supplier" type="text" name="supplier">
+            {% if allSuppliers %}
+              {% for entry in allSuppliers %}
+                  <option value="{{ entry.supplier }}">{{ entry.supplier }}</option>
+              {% endfor %}
+            {% endif %}
+          </select>
         </div>
 
         <div class="inline-flex inputBox">
           <label for="numBoxes">Number of Boxes*: </label>
           <input id="numBoxes" type="number" name="numBoxes" min="1">
+        </div>
+
+        <div class="inline-flex inputBox">
+          <label for="location">Location: </label>
+          <input id="location" type="text" name="location" maxlength="20">
         </div>
 
         <div class="inline-flex inputBox">
@@ -52,7 +63,7 @@
 
         <div class="inline-flex inputBox">
           <label for="price">Price per Pound: </label>
-          <input id="price" type="number" name="price" value="0">
+          <input id="price" type="number" name="price" value="0" step="any">
         </div>
 
         <br>
