--- a/CWBDataApp/templates/CWBDataApp/MaterialInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventoryUpdate.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="justify-content-center row no-gutters">
-    <form action="{% url 'CWBDataApp:MaterialInventory'%}" method="post">
+    <form action="{% url 'CWBDataApp:MaterialInventoryUpdate'%}" method="post">
       <div class="d-inline-flex flex-column">
         <h4 id=header>Update Material Inventory </h4>
         {% csrf_token %}
